--- a/flask_project/templates/home.html
+++ b/flask_project/templates/home.html
@@ -99,7 +99,7 @@
     resultDiv = document.getElementById("resultDiv");
 
     populateExampleFromButton1.addEventListener("click", function () {
-        textToSummarize.value = = "European scientists think they can now describe with confidence what's driving the drift of the North Magnetic Pole. \
+        textToSummarize.value = "European scientists think they can now describe with confidence what's driving the drift of the North Magnetic Pole. \
 It's shifted in recent years away from Canada towards Siberia. And this rapid movement has required more frequent updates to navigation systems,\
 including those that operate the mapping functions in smartphones. A team, led from Leeds University, says the behaviour is explained by the competition \
 of two magnetic \"blobs\" on the edge of the Earth's outer core. Changes in the flow of molten material in the planet's interior have altered the strength \
