Changed up example 3 to have essay like text

--- a/flask_project/templates/home.html
+++ b/flask_project/templates/home.html
@@ -144,18 +144,16 @@ In the process, it came to within just a few hundred kilometres of the geographi
     });
 
     populateExampleFromButton3.addEventListener("click", function () {
-        let example3 = "Pressure is mounting from all directions on Facebook CEO Mark Zuckerberg for his refusal to take action against posts from President Donald Trump. \
-The latest salvo comes from 33 former employees who worked at the company during its early stages, including some who helped create Facebook’s original community guidelines. \
-The open letter was first published by The New York Times; we have republished the letter in full below. While many of the arguments in the letter have been made before, \
-including recently by The Verge, the letter published today presents a singularly clear and strongly argued case against Zuckerberg’s position. The group of former employees \
-argues that Facebook’s position on moderating Trump is inconsistent, that it consciously exposes the public to dangers the company has seen before, and that it creates a \
-tautological double-standard that makes the speech of the most powerful “inviolable.” Zuckerberg has maintained that Facebook should not become the “arbiter of truth” and \
-said that his position on Trump’s tweets is based on research and conversation. While he expressed disgust with Trump’s racist language, he concluded that the president’s \
-“when the looting starts, the shooting starts!” post had “no history of being read as a dog whistle for vigilante supporters to take justice into their own hands.” Following \
-mounting internal dissent, including a Monday walkout, Zuckerberg promised employees that the company would “re-examine policies about states threatening the use of force.” \
-“President Trump’s post on Friday not only threatens violence by the state against its citizens, it also sends a signal to millions who take cues from the president,” the \
-authors write. “In an age of live-streamed shootings, Facebook should know the danger of this better than most. Trump’s rhetoric, steeped in the history of American racism, \
-targeted people whom Facebook would not allow to repeat his words back to him.”";
+        let example3 = "Marvel villains suck. Most of the villains pose negligible threat to the hero and does bad things just because they are the villain. For example, \
+take Malekith from Thor The Dark World. He was not even nearly as powerful as Thor. Also, he didn’t have any solid motive behind his pursuit for the Aether. He said he wants \
+to return the universe to its original dark state. What the fuck! The original dark state was there before the big bang, and there’s just one character who is that old and he’s \
+a lot cooler than Malekith. After Big Bang, the universe as we know it was formed. Then where is the dark state? I found him extremely shallow and one dimensional. Take another one, \
+Whiplash from Iron Man 2. Okay, he may have a reason to hurt Tony as Howard probably did something bad with his father. However, at no point of the film did he appear a threat to Tony. \
+He wanted to beat Tony in a suit similar to Iron Man? What was he thinking? However, the award for worst villain probably goes to Ultron from Avengers Age of Ultron. He was a peacekeeping \
+program whose main goal was to save the Earth. He deduced humans are the greatest threat to Earth and thus decided to destroy them. Fine till now. Later, when he fights the Avengers \
+in Sokovia, why the fuck did he say “This what I always wanted! All of you, against all of me.” Dude, you never wanted that. You wanted total destruction. Agreed the Avengers were a \
+threat to your mission, but they were not your mission! But not all villains are like them. Hela, Vulture, Thanos etc were a gem of a villain. They posed a great threat, had real \
+motives behind there actions and at a point, even made us think they are gonna win (Thanos actually won). I hope Marvel cures this problem in the future."
         populateExample(example3);
     });
 
