Minor spacing tweaks to "Try an Example" buttons

--- a/flask_project/templates/home.html
+++ b/flask_project/templates/home.html
@@ -2,9 +2,9 @@
 {% block content %}
     <h2>What would you like to summarize?</h2>
     <div id="buttons">
-        <button id="exampleButton1" type="button" class="btn btn-outline-secondary float-left example-button">Example 1</button>
-        <button id="exampleButton2" type="button" class="btn btn-outline-secondary float-left example-button">Example 2</button>
-        <button id="exampleButton3" type="button" class="btn btn-outline-secondary float-left example-button">Example 3</button>
+        <button id="exampleButton1" type="button" class="btn btn-outline-secondary float-left example-button mr-2">Example 1</button>
+        <button id="exampleButton2" type="button" class="btn btn-outline-secondary float-left example-button mr-2">Example 2</button>
+        <button id="exampleButton3" type="button" class="btn btn-outline-secondary float-left example-button mr-2">Example 3</button>
     </div>
     <div id="textarea-group">
         <form method="POST" action="">
