Fixed button name

--- a/flask_project/templates/home.html
+++ b/flask_project/templates/home.html
@@ -21,7 +21,7 @@
                 {{ text_form.text(id="textToSum", class="form-control", placeholder="Enter Website URL", placeholder="Type or place English text to summarize here.") }}
             {% endif %}
 
-            {{ text_form.submit(id="submitButton", class="btn btn-primary mt-2") }}
+            {{ text_form.submit_text(id="submitButton", class="btn btn-primary mt-2") }}
         </form>
     </div>
     <div class="hr-sect">OR</div>
