--- a/flask_project/templates/home.html
+++ b/flask_project/templates/home.html
@@ -35,6 +35,9 @@
         </div>
     </form>
 
+    <input id="subscriptionKey" type="text" size="40" value="36e5268307b74c7d83a33fa4d6fd630a" hidden>
+    <input id="serviceRegion" type="text" size="40" value="eastus" hidden></td>
+
     {% if context and context.summary_dict %}
         <h2 class="mt-4 mb-2">Your TL;DR</h2>
         {% if context.minutes_saved %}
@@ -44,9 +47,6 @@
         {% endif %}
         {% for header, summary in context.summary_dict.items() %}
         <div id="summary-section" >
-          <input id="subscriptionKey" type="text" size="40" value="36e5268307b74c7d83a33fa4d6fd630a" hidden>
-          <input id="serviceRegion" type="text" size="40" value="eastus" hidden></td>
-            <textarea id="phraseDiv" style="display: inline-block;width:500px;height:200px" hidden>{{context.summary}}</textarea>
             <div class="card">
               <div class="card-header">
                 {{ header }}
@@ -56,7 +56,7 @@
                   <p>{{ summary }}</p>
                 </blockquote>
 
-                <button type="button" id="startSpeakTextAsyncButton" class="btn btn-primary float-right">
+                <button type="button" id="startSpeakTextAsyncButton" onclick="playAudio()" class="btn btn-primary float-right">
                     <i class="fa fa-play" aria-hidden="true"></i> Listen
                 </button>
 
@@ -76,8 +76,6 @@
 <script>
 
   // status fields and start button in UI
-  var phraseDiv;
-  var resultDiv;
   var startSpeakTextAsyncButton;
   var populateExampleFromButton1;
   var populateExampleFromButton2;
@@ -92,6 +90,74 @@
   var SpeechSDK;
   var synthesizer;
 
+  function playAudio() {
+    var startSpeakTextAsyncButton = event.srcElement;
+    var inputText = startSpeakTextAsyncButton.parentElement.children[0].children[0].innerHTML;
+
+    var soundContext = undefined;
+    try {
+      var AudioContext = window.AudioContext || window.webkitAudioContext || false;
+      if (AudioContext) {
+        soundContext = new AudioContext();
+      } else {
+        alert("AudioContext not supported");
+      }
+    }
+    catch(e){
+      window.console.log("no sound context found, no audio output. " + e);
+    }
+
+    startSpeakTextAsyncButton.disabled = true;
+
+    // if we got an authorization token, use the token. Otherwise use the provided subscription key
+    var speechConfig;
+    if (authorizationToken) {
+      speechConfig = SpeechSDK.SpeechConfig.fromAuthorizationToken(authorizationToken, serviceRegion.value);
+    } else {
+      if (subscriptionKey.value === "" || subscriptionKey.value === "subscription") {
+        alert("Please enter your Microsoft Cognitive Services Speech subscription key!");
+        startSpeakTextAsyncButton.disabled = false;
+        return;
+      }
+      speechConfig = SpeechSDK.SpeechConfig.fromSubscription(subscriptionKey.value, serviceRegion.value);
+    }
+
+    synthesizer = new SpeechSDK.SpeechSynthesizer(speechConfig);
+
+    // resultDiv.innerHTML = "Downloading audio file...";
+    synthesizer.speakTextAsync(
+      inputText,
+      function (result) {
+        startSpeakTextAsyncButton.disabled = false;
+        // resultDiv.innerHTML = "";
+
+        window.console.log(result);
+        if (result.audioData && soundContext) {
+          var source = soundContext.createBufferSource();
+          soundContext.decodeAudioData(result.audioData, function (newBuffer) {
+            source.buffer = newBuffer;
+            source.connect(soundContext.destination);
+            source.start(0);
+          });
+        }
+
+        synthesizer.close();
+        synthesizer = undefined;
+      },
+      function (err) {
+        startSpeakTextAsyncButton.disabled = false;
+        // resultDiv.innerHTML += "Error: ";
+        // resultDiv.innerHTML += err;
+        // resultDiv.innerHTML += "\n";
+        window.console.log(err);
+
+        synthesizer.close();
+        synthesizer = undefined;
+      });
+
+
+  }
+
   document.addEventListener("DOMContentLoaded", function () {
     startSpeakTextAsyncButton = document.getElementById("startSpeakTextAsyncButton");
     populateExampleFromButton1 = document.getElementById("exampleButton1");
@@ -102,8 +168,6 @@
     textSubmissionButton = document.getElementById("submitButton")
     subscriptionKey = document.getElementById("subscriptionKey");
     serviceRegion = document.getElementById("serviceRegion");
-    phraseDiv = document.getElementById("phraseDiv");
-    resultDiv = document.getElementById("resultDiv");
 
     function populateExample(example) {
         if (textToSummarizeErrorState != null) {
@@ -160,71 +224,6 @@ in Sokovia, why the fuck did he say “This what I always wanted! All of you, ag
 threat to your mission, but they were not your mission! But not all villains are like them. Hela, Vulture, Thanos etc were a gem of a villain. They posed a great threat, had real \
 motives behind there actions and at a point, even made us think they are gonna win (Thanos actually won). I hope Marvel cures this problem in the future."
         populateExample(example3);
-    });
-
-    startSpeakTextAsyncButton.addEventListener("click", function () {
-      var soundContext = undefined;
-      try {
-        var AudioContext = window.AudioContext || window.webkitAudioContext || false;
-        if (AudioContext) {
-          soundContext = new AudioContext();
-        } else {
-          alert("AudioContext not supported");
-        }
-      }
-      catch(e){
-        window.console.log("no sound context found, no audio output. " + e);
-      }
-
-      startSpeakTextAsyncButton.disabled = true;
-
-      // if we got an authorization token, use the token. Otherwise use the provided subscription key
-      var speechConfig;
-      if (authorizationToken) {
-        speechConfig = SpeechSDK.SpeechConfig.fromAuthorizationToken(authorizationToken, serviceRegion.value);
-      } else {
-        if (subscriptionKey.value === "" || subscriptionKey.value === "subscription") {
-          alert("Please enter your Microsoft Cognitive Services Speech subscription key!");
-          startSpeakTextAsyncButton.disabled = false;
-          return;
-        }
-        speechConfig = SpeechSDK.SpeechConfig.fromSubscription(subscriptionKey.value, serviceRegion.value);
-      }
-
-      synthesizer = new SpeechSDK.SpeechSynthesizer(speechConfig);
-
-      resultDiv.innerHTML = "Downloading audio file...";
-
-      var inputText = phraseDiv.value;
-      synthesizer.speakTextAsync(
-        inputText,
-        function (result) {
-          startSpeakTextAsyncButton.disabled = false;
-          resultDiv.innerHTML = "";
-
-          window.console.log(result);
-          if (result.audioData && soundContext) {
-            var source = soundContext.createBufferSource();
-            soundContext.decodeAudioData(result.audioData, function (newBuffer) {
-              source.buffer = newBuffer;
-              source.connect(soundContext.destination);
-              source.start(0);
-            });
-          }
-
-          synthesizer.close();
-          synthesizer = undefined;
-        },
-        function (err) {
-          startSpeakTextAsyncButton.disabled = false;
-          resultDiv.innerHTML += "Error: ";
-          resultDiv.innerHTML += err;
-          resultDiv.innerHTML += "\n";
-          window.console.log(err);
-
-          synthesizer.close();
-          synthesizer = undefined;
-        });
     });
 
     if (!!window.SpeechSDK) {
