--- a/flask_project/templates/home.html
+++ b/flask_project/templates/home.html
@@ -2,9 +2,9 @@
 {% block content %}
     <h2>What would you like to summarize?</h2>
     <div id="buttons">
-        <button id="exampleButton1" type="button" class="btn btn-outline-secondary float-left example-button">Example 1</button>
-        <button id="exampleButton2" type="button" class="btn btn-outline-secondary float-left example-button">Example 2</button>
-        <button id="exampleButton3" type="button" class="btn btn-outline-secondary float-left example-button">Example 3</button>
+        <button id="exampleButton1" type="button" class="btn btn-outline-secondary float-left example-button mr-2">Example 1</button>
+        <button id="exampleButton2" type="button" class="btn btn-outline-secondary float-left example-button mr-2">Example 2</button>
+        <button id="exampleButton3" type="button" class="btn btn-outline-secondary float-left example-button mr-2">Example 3</button>
     </div>
     <div id="textarea-group">
         <form method="POST">
@@ -56,11 +56,11 @@
                   <p>{{ summary }}</p>
                 </blockquote>
 
-                <button type="button" id="startSpeakTextAsyncButton" onclick="playAudio()" class="btn btn-primary float-right">
+                <button type="button" onclick="playAudio()" class="btn btn-primary float-right">
                     <i class="fa fa-play" aria-hidden="true"></i> Listen
                 </button>
 
-                <button type="button" id="copyText" class="btn btn-outline-secondary float-right mr-2">
+                <button type="button" onclick="copyToClipboard()" class="btn btn-outline-secondary float-right mr-2">
                     <i class="fa fa-copy" aria-hidden="true"></i> Copy
                 </button>
               </div>
@@ -76,7 +76,6 @@
 <script>
 
   // status fields and start button in UI
-  var startSpeakTextAsyncButton;
   var populateExampleFromButton1;
   var populateExampleFromButton2;
   var populateExampleFromButton3;
@@ -89,6 +88,21 @@
   var authorizationToken;
   var SpeechSDK;
   var synthesizer;
+
+  function copyToClipboard() {
+    var button = event.srcElement;
+
+    // Summary
+    var copyText = button.parentElement.children[0].children[0].innerHTML;
+
+    const el = document.createElement('textarea');
+    el.value = copyText;
+    document.body.appendChild(el);
+    el.select();
+    document.execCommand('copy');
+    document.body.removeChild(el);
+
+  }
 
   function playAudio() {
     var startSpeakTextAsyncButton = event.srcElement;
